# local-folio

./: .gitattributes  .gitignore  README.md  pyproject.toml  run_web_ui.ps1
.github/workflows/: tests.yml
local_folio/: __init__.py  cli.py  core.py  db.py  logging_config.py  prices.py  server.py
scripts/: agregar_entrada.py  backfill_registro.py  gestor_portafolio.py  setup_test_ont.py  stop_web_ui.ps1  web_ui_server.py
tests/: test_data_migration.py  test_gestor_portafolio.py  test_prices_cache.py  test_server.py
web/: app.js  i18n.js  index.html  styles.css
web/js/: api.js  format.js  movement-form.js  router.js  state.js  ui.js
web/js/views/: account-detail.js  accounts.js  config.js  dashboard.js  market.js  movements.js  staking.js
